boltffi_bindgen/src/render/kotlin/snapshots/boltffi_bindgen__render__kotlin__templates__tests__snapshot_callback_with_async_method.snap
---
source: boltffi_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
/**
 * ### Thread Safety
 *
 * Callback methods may be invoked from any thread and the thread is not guaranteed to be
 * the same between calls. **Your implementation must be thread-safe.**
 * Use `BoltFFIScope.launchOnMain` if updating UI.
 */
interface AsyncHandler {
    suspend fun onComplete(result: String)
}

private object AsyncHandlerMap {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, AsyncHandler>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(obj: AsyncHandler): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = obj
        return handle
    }

    fun get(handle: Long): AsyncHandler? = map[handle]

    fun remove(handle: Long): AsyncHandler? = map.remove(handle)

    fun clone(handle: Long): Long {
        val obj = map[handle] ?: return 0L
        return insert(obj)
    }
}

object AsyncHandlerCallbacks {
    @JvmStatic
    fun free(handle: Long) {
        AsyncHandlerMap.remove(handle)
    }

    @JvmStatic
    fun clone(handle: Long): Long {
        return AsyncHandlerMap.clone(handle)
    }

    @JvmStatic
    fun on_complete(handle: Long, result: String, callbackPtr: Long, callbackData: Long) {
        val impl = AsyncHandlerMap.get(handle) ?: error("AsyncHandlerMap: invalid handle $handle")
        BoltFFIScope.launch {
            impl.onComplete(result)
            Native.invokeOnComplete(callbackPtr, callbackData)
        }
    }
}

object AsyncHandlerBridge {
    private val registered = java.util.concurrent.atomic.AtomicBoolean(false)

    fun register() {
        if (!registered.compareAndSet(false, true)) return
    }

    fun create(impl: AsyncHandler): Long {
        register()
        return AsyncHandlerMap.insert(impl)
    }
}
