boltffi_bindgen/src/render/kotlin/snapshots/boltffi_bindgen__render__kotlin__templates__tests__snapshot_class_with_constructor_and_method.snap
---
source: boltffi_bindgen/src/render/kotlin/templates.rs
assertion_line: 1379
expression: template.render().unwrap()
---
class Database private constructor(internal val handle: Long) : AutoCloseable {
    private val closed = AtomicBoolean(false)

    constructor(path: String) : this(
        kotlin.run {
            val pathWire = WireWriterPool.acquire(BoltFFIWire.sizeString(path))
        run {
            val wire = pathWire.writer
            BoltFFIWire.writeString(path)
        }
            try {
                Native.boltffi_database_open(pathWire.ptr, pathWire.len)
            } finally {
                pathWire.close()
            }
        }
    )

    override fun close() {
        if (!closed.compareAndSet(false, true)) return
        Native.boltffi_database_free(handle)
    }

    fun query(sql: String): String { /* impl */ }
}
